--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_profile_picture.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_profile_picture.yml
@@ -31,7 +31,7 @@ settings:
   title_field_required: false
   default_image:
     uuid: ''
-    alt: ''
+    alt: 'Fellow Picture'
     title: ''
     width: 300
     height: 300
