--- a/docroot/profiles/custom/stanford_profile/config/sync/field.storage.node.su_casbs_profile_picture.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.storage.node.su_casbs_profile_picture.yml
@@ -17,7 +17,7 @@ settings:
   uri_scheme: public
   default_image:
     uuid: ''
-    alt: ''
+    alt: 'Fellow Picture'
     title: ''
     width: null
     height: null
