--- a/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/core.entity_form_display.node.stanford_person.default.yml
@@ -8,22 +8,28 @@ dependencies:
     - field.field.node.stanford_person.layout_builder__layout
     - field.field.node.stanford_person.stanford_intranet__access
     - field.field.node.stanford_person.su_casbs_cs_year
+    - field.field.node.stanford_person.su_casbs_cs_year_in_stu
     - field.field.node.stanford_person.su_casbs_current_affiliation
     - field.field.node.stanford_person.su_casbs_custom_order
+    - field.field.node.stanford_person.su_casbs_facfellow_year_in_stu
     - field.field.node.stanford_person.su_casbs_faculty_fellow_year
     - field.field.node.stanford_person.su_casbs_feature_people
     - field.field.node.stanford_person.su_casbs_feature_people_text
     - field.field.node.stanford_person.su_casbs_fellow_year
+    - field.field.node.stanford_person.su_casbs_fellow_year_in_stu
     - field.field.node.stanford_person.su_casbs_field_discipline
     - field.field.node.stanford_person.su_casbs_person_bio
     - field.field.node.stanford_person.su_casbs_person_book_links
     - field.field.node.stanford_person.su_casbs_person_id
     - field.field.node.stanford_person.su_casbs_person_journal_links
     - field.field.node.stanford_person.su_casbs_person_type
+    - field.field.node.stanford_person.su_casbs_pract_year_in_stu
     - field.field.node.stanford_person.su_casbs_practitioner_year
     - field.field.node.stanford_person.su_casbs_profile_picture
     - field.field.node.stanford_person.su_casbs_ra_year
+    - field.field.node.stanford_person.su_casbs_ra_year_in_stu
     - field.field.node.stanford_person.su_casbs_visiting_scholar_year
+    - field.field.node.stanford_person.su_casbs_vs_year_in_stu
     - field.field.node.stanford_person.su_metatags
     - field.field.node.stanford_person.su_person_academic_appt
     - field.field.node.stanford_person.su_person_admin_appts
@@ -51,12 +57,14 @@ dependencies:
     - field.field.node.stanford_person.su_person_telephone
     - field.field.node.stanford_person.su_person_type_group
     - field.field.node.stanford_person.su_shared_tags
+    - image.style.thumbnail
     - node.type.stanford_person
   module:
     - allowed_formats
     - change_labels
     - cshs
     - field_group
+    - image
     - layout_paragraphs
     - link
     - media_library
@@ -207,6 +215,14 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  su_casbs_cs_year_in_stu:
+    type: text_textarea
+    weight: 74
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   su_casbs_current_affiliation:
     type: text_textfield
     weight: 58
@@ -220,6 +236,14 @@ content:
     weight: 71
     region: content
     settings:
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_facfellow_year_in_stu:
+    type: text_textarea
+    weight: 73
+    region: content
+    settings:
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
   su_casbs_faculty_fellow_year:
@@ -255,6 +279,19 @@ content:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
+      placeholder: ''
+    third_party_settings:
+      change_labels:
+        add_another: ''
+        field_label_overwrite: ''
+        hide_add_another: 0
+        force_single_cardinality: 0
+  su_casbs_fellow_year_in_stu:
+    type: text_textarea
+    weight: 72
+    region: content
+    settings:
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
   su_casbs_field_discipline:
@@ -311,6 +348,14 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  su_casbs_pract_year_in_stu:
+    type: text_textarea
+    weight: 76
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   su_casbs_practitioner_year:
     type: entity_reference_autocomplete
     weight: 65
@@ -339,6 +384,14 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  su_casbs_ra_year_in_stu:
+    type: text_textarea
+    weight: 77
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   su_casbs_visiting_scholar_year:
     type: entity_reference_autocomplete
     weight: 68
@@ -347,6 +400,14 @@ content:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  su_casbs_vs_year_in_stu:
+    type: text_textarea
+    weight: 75
+    region: content
+    settings:
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
   su_metatags:
@@ -560,23 +621,6 @@ hidden:
   path: true
   promote: true
   sticky: true
-  su_casbs_cs_year: true
-  su_casbs_current_affiliation: true
-  su_casbs_custom_order: true
-  su_casbs_faculty_fellow_year: true
-  su_casbs_feature_people: true
-  su_casbs_feature_people_text: true
-  su_casbs_fellow_year: true
-  su_casbs_field_discipline: true
-  su_casbs_person_bio: true
-  su_casbs_person_book_links: true
-  su_casbs_person_id: true
-  su_casbs_person_journal_links: true
-  su_casbs_person_type: true
-  su_casbs_practitioner_year: true
-  su_casbs_profile_picture: true
-  su_casbs_ra_year: true
-  su_casbs_visiting_scholar_year: true
   su_person_academic_appt: true
   su_person_admin_appts: true
   su_person_research_interests: true
