--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_field_discipline.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_field_discipline.yml
@@ -6,13 +6,12 @@ dependencies:
     - field.storage.node.su_casbs_field_discipline
     - node.type.stanford_person
   module:
-    - allowed_formats
     - text
 id: node.stanford_person.su_casbs_field_discipline
 field_name: su_casbs_field_discipline
 entity_type: node
 bundle: stanford_person
-label: casbs_field_discipline
+label: Discipline
 description: Discipline
 required: false
 translatable: false
