--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.stanford_basic_pages.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.stanford_basic_pages.yml
@@ -694,6 +694,47 @@ display:
             offset: true
             offset_label: offset
           quantity: 9
+      arguments:
+        term_node_taxonomy_name_depth:
+          id: term_node_taxonomy_name_depth
+          table: node_field_data
+          field: term_node_taxonomy_name_depth
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          plugin_id: taxonomy_index_name_depth
+          default_action: empty
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: true
+          depth: '1'
+          use_taxonomy_term_path: false
+          vocabularies:
+            basic_page_types: basic_page_types
+      defaults:
+        arguments: false
       display_description: ''
       display_extenders: {  }
       graphql_query_name: stanfordBasicPages
@@ -712,7 +753,7 @@ display:
         - 'config:field.storage.paragraph.su_banner_image'
   viewfield_block_1:
     id: viewfield_block_1
-    display_title: 'Card Grid'
+    display_title: 'Card Grid, Creation Date Sort (desc)'
     display_plugin: viewfield_block
     position: 2
     display_options:
@@ -776,6 +817,45 @@ display:
             offset: true
             offset_label: offset
           quantity: 9
+      arguments:
+        term_node_taxonomy_name_depth:
+          id: term_node_taxonomy_name_depth
+          table: node_field_data
+          field: term_node_taxonomy_name_depth
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          plugin_id: taxonomy_index_name_depth
+          default_action: empty
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: true
+          depth: '1'
+          use_taxonomy_term_path: false
+          vocabularies:
+            basic_page_types: basic_page_types
       style:
         type: graphql
         options:
@@ -786,7 +866,7 @@ display:
       defaults:
         style: false
         row: false
-        arguments: true
+        arguments: false
       display_description: ''
       display_extenders: {  }
       graphql_query_name: stanfordBasicPagesCards
@@ -797,6 +877,62 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.su_page_description'
+        - 'config:field.storage.node.su_page_image'
+        - 'config:field.storage.paragraph.su_banner_image'
+  viewfield_block_2:
+    id: viewfield_block_2
+    display_title: 'Card Grid, Alphabetical Title Sort (asc)'
+    display_plugin: viewfield_block
+    position: 2
+    display_options:
+      display_extenders: {  }
+      display_description: ''
+      style:
+        type: html_list
+        options:
+          row_class: ''
+          default_row_class: 1
+          uses_fields: 0
+          type: ul
+          wrapper_class: ''
+          class: 'su-list-unstyled grid-container-3'
+      defaults:
+        style: false
+        row: false
+        arguments: true
+        sorts: false
+      row:
+        type: 'entity:node'
+        options:
+          relationship: none
+          view_mode: stanford_h3_card
+      block_category: 'Basic Page Type Lists (Views)'
+      sorts:
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+            field_identifier: ''
+          entity_type: node
+          entity_field: title
+          plugin_id: standard
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
